Update QTS content
Updating the content for the Apply for QTS and GAI integration.

--- a/app/views/auth/_email.html
+++ b/app/views/auth/_email.html
@@ -2,13 +2,12 @@
     id: "[email]",
     name: "[email]",
     label: {
-      text: "Email address",
+      text: "",
       classes: "govuk-label--s"
     },
- 
+
     hint: {
       html: emailHint
     },
     value: data['email'] or email
   }) }}
-
