--- a/app/views/auth/start.html
+++ b/app/views/auth/start.html
@@ -54,7 +54,7 @@ Apply for qualified teacher status (QTS) in England
 
        <p class="govuk-heading-m">Teaching services account</p>
 
-       <p>You’ll need to create a teaching services account to Apply for QTS in England. You can use do this at the start of this service.</p>
+       <p>You’ll need to create a teaching services account to Apply for QTS in England. You can do this at the start of your application if you're eligible.</p>
 
 
 
