--- a/app/views/auth/email.html
+++ b/app/views/auth/email.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}Your email address?{% endset %}
+{% set title %}Your email address{% endset %}
 {% set emailHint %}We'll use this to send you a code to confirm your email address. Do not use a work or university email that you might lose access to.{% endset %}
 
 
