more content updates
Additional content fixes

--- a/app/views/qts/eligibility/start-eligibility.html
+++ b/app/views/qts/eligibility/start-eligibility.html
@@ -35,6 +35,10 @@
 		<p class="govuk-body">If you’ve already started your application using this service, you can <a
 				href="../create-account-sign-in">sign in to continue working on it</a>.</p>
 
+		<p class="govuk-heading-m">Teaching services account</p>
+
+		<p>You’ll need to create a Teaching services account to Apply for QTS in England. You can do this at the start of your application if you're eligible.</p>
+
 		<a role="button" draggable="false"
 		   class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-9"
 		   data-module="govuk-button" href="../create-account-sign-in">Start now
