--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -2,7 +2,7 @@
   href={{- signIn -}}
 {% endset -%}
 
-<h1 class="govuk-heading-xl">Create a teaching services account</h1>
+<h1 class="govuk-heading-xl">Create a Teaching services account</h1>
 
 
   <p>It will only take a few minutes and you’ll need:</p>
@@ -32,7 +32,7 @@
 
 
   {{ govukDetails({
-    summaryText: "About teaching services accounts",
+    summaryText: "About Teaching services accounts",
     html: "
     <p>Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.</p>
     <p>At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.</p>
