--- a/app/views/sign-in/interstitial.html
+++ b/app/views/sign-in/interstitial.html
@@ -5,7 +5,7 @@
 {% block form %}
 <p class="govuk-!-margin-bottom-6">Continue your application by signing into your {{ data.tsa }}. </p>
 {{ govukDetails({
-    summaryText: "About teaching services accounts",
+    summaryText: "About Teaching services accounts",
     html: "
     <p>Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.</p>
     <p>At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.</p>
