--- a/app/views/sign-in/_finish.html
+++ b/app/views/sign-in/_finish.html
@@ -2,8 +2,4 @@
 
 
 
-<p class="govuk-!-margin-bottom-6">Continue to <b>{{ data.qts }}</b> </p>
-
-
-
-
+<p class="govuk-!-margin-bottom-6">Continue to <b>{{ data.qts }}</b>.</p>
