--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -49,8 +49,8 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
           text: "Clear data"
         },
         {
-          href: "/set-user-type?type=public",
-          text: "Public referral form"
+          href: "/settings",
+          text: "Settings"
         },
         {
           href: "/set-user-type?type=employer",
