--- a/app/views/qts/ga-account.html
+++ b/app/views/qts/ga-account.html
@@ -1,10 +1,9 @@
 {% extends "layouts/forms.html" %}
 {% set hideButton = true %}
-{% set accountPath = '/qts/tsa/auth/email' %}
-{% set signIn = '/qts/tsa/sign-in/email' %}
+{% set accountPath = '/user-research/qts/create-account' %}
+{% set signIn = '/user-research/qts/sign-in' %}
 {% set hideBackLink = true %}
 {% set showheader = true %}
-
 
 
 
