--- a/app/views/qts/eligibility/eligible.html
+++ b/app/views/qts/eligibility/eligible.html
@@ -299,7 +299,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 		<p class="govuk-body">You'll need to create a teaching services account. It will only take a few minutes.</p>
 
 		<a role="button" draggable="false" data-module="govuk-button" class="govuk-button govuk-button--start"
-		   href="/qts/tsa/ga-account">Create an account
+		   href="/qts/ga-account">Create an account
 			<svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19"
 				 viewBox="0 0 33 40" focusable="false" aria-hidden="true">
 				<path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"/>
