--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -50,7 +50,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         },
         {
           href: "/settings",
-          text: "Settings"
+          text: "settings"
         },
         {
           href: "/set-user-type?type=employer",
