--- a/app/views/sign-in/email-code.html
+++ b/app/views/sign-in/email-code.html
@@ -1,5 +1,6 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Confirm your email address{% endset %}
+{% set signIn = 'true' %}
 
 
 {% block form %}
