--- a/app/views/sign-in/phone-code.html
+++ b/app/views/sign-in/phone-code.html
@@ -1,6 +1,6 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Check your phone{% endset %}
-{% set auth = 'true' %}
+{% set signIn = 'true' %}
 
 
 {% block form %}
