Content alignment for UR
- fix capitlisation
- make form labels and H1s statements

--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -35,6 +35,6 @@
     summaryText: "About Teaching services accounts",
     html: "
     <p>Teaching services accounts are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.</p>
-    <p>At the moment there are only a few DfE services using teaching services accounts. In the future, you’ll be able to use your teaching services account to sign in to most DfE teaching services.</p>
+    <p>At the moment there are only a few DfE services using Teaching services accounts. In the future, you’ll be able to use your account details to sign in to most DfE teaching services.</p>
     "
     }) }}
