--- a/app/views/auth/date-of-birth.html
+++ b/app/views/auth/date-of-birth.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}What's your date of birth?{% endset %}
+{% set title %}Your date of birth{% endset %}
 
 {% block form %}
   {% include 'auth/_date-of-birth.html' %}
