--- a/app/views/auth/name.html
+++ b/app/views/auth/name.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}What's your name?{% endset %}
+{% set title %}Your name{% endset %}
 {% set signedIn = 'false' %}
 
 
