--- a/app/views/auth/phone.html
+++ b/app/views/auth/phone.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}Enter your mobile number{% endset %}
+{% set title %}Your mobile number{% endset %}
 {% set auth = 'true' %}
 
 
