--- a/app/views/sign-in/finish.html
+++ b/app/views/sign-in/finish.html
@@ -1,8 +1,7 @@
 {% extends "layouts/forms.html" %}
-{% set title %}You've signed into your Teaching Services account{% endset %}
+{% set title %}You've signed into your Teaching services account{% endset %}
 {% set hideBackLink = true %}
 
 {% block form %}
   {% include 'sign-in/_finish.html' %}
 {% endblock %}
-
