--- a/app/views/auth/_phone.html
+++ b/app/views/auth/_phone.html
@@ -8,7 +8,7 @@
     id: "[phone]",
     name: "[phone]",
     label: {
-      text: "Enter mobile number ",
+      text: "Mobile number ",
       classes: "govuk-label--s"
     },
     type: "tel",
@@ -18,7 +18,3 @@
     },
     value: data['phone'] or phone
   }) }}
-
-
-
-
