--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -5,19 +5,8 @@
 <h1 class="govuk-heading-xl">Create a Teaching services account</h1>
 
 
-  <p>It will only take a few minutes and you’ll need:</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>
-      an email address (used for contact and account security)
-    </li>
-    <li>
-      a mobile phone number (used for account security)
-    </li>
-    <li>
-      your name and date of birth
-    </li>
-</ul>
-    <p>Once you've created an account, you can continue to {{ data.qts }}.</p>
+
+    {% include 'auth/_account-info.html' %}
 
   {{ govukButton({
     text: 'Create an account',
