--- a/app/views/auth/_resend-phone.html
+++ b/app/views/auth/_resend-phone.html
@@ -5,7 +5,7 @@
 
 {% block form %}
 
-<p class="govuk-!-margin-bottom-6">We'll send text message to <strong>{{phonehtml | maskPhoneNumber}}</strong> which contains a security code. </p>
+<p class="govuk-!-margin-bottom-6">We'll send a text message to <strong>{{phonehtml | maskPhoneNumber}}</strong> which contains a security code. </p>
 
 
 
