--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,12 +24,20 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="govuk-heading-m">QTS </h2>
+<h2 class="govuk-heading-m">QTS integration </h2>
 <p><a href="/qts/eligibility/start-eligibility">Check eligibility start page</a> </p>
 <p><a href="/qts/eligibility/eligible">Eligible user start page </a> </p>
 <p><a href="/qts/apply-for-qts">QTS task list - account view </a> </p>
 
-
+<h2 class="govuk-heading-m">Edge cases </h2>
+<p>
+  <a href="/user-research/qts/sign-in?email=new@email.com">Sign in (no account exists)</a> <br>
+  <span class="govuk-hint">User attempts to sign in but does not have an account ( new@email.com )</span>
+</p>
+<p>
+  <a href="/user-research/qts/create-account?email=existing@email.com">Create account (account exists)</a> <br>
+  <span class="govuk-hint">User attempts to create an account with an existing email ( existing@email.com )</span>
+</p>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
