--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -19,3 +19,6 @@ $govuk-assets-path: '/govuk/assets/';
 @import "govuk-page-masthead";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+.secondary-button {
+    margin: 0 0 0 .5em;
+}
