--- a/app/views/account/interstitial.html
+++ b/app/views/account/interstitial.html
@@ -24,7 +24,7 @@
         date of birth
     </li>
     <li>
-        mobile number <span class="hint">Used to log you in</span>
+        mobile number 
     </li>
 </ul>
 <p><a href='/account/account-details'>Change your account details in your {{ data.tsa }}</a></p>
