--- a/app/views/auth/sign-in-interstitial.html
+++ b/app/views/auth/sign-in-interstitial.html
@@ -5,7 +5,7 @@
 
 {% block form %}
 
-<p class="govuk-!-margin-bottom-6">We've found a teaching services account that uses the email {{ data.email or 'email@example.com' }}. </p>
+<p>We've found a teaching services account that uses the email {{ data.email or 'email@example.com' }}. </p>
 
 <p>Continue to sign into your account</p>
 
