--- a/app/views/qts/_details.html
+++ b/app/views/qts/_details.html
@@ -1,5 +1,5 @@
 {% set details %}
-	Change your personal and contact information via your <a href='/account/interstitial'>{{ data.tsa }}</a>
+	Change your name and date of birth on your <a href='/account/interstitial'>{{ data.tsa }}</a>
 {% endset %}
 
 
