--- a/app/views/account/signed-out.html
+++ b/app/views/account/signed-out.html
@@ -10,7 +10,7 @@
 
 {{ govukButton({
     text: "Back to GOV.UK",
-    href: "../auth/start"
+    href: "/qts/eligibility/start-eligibility"
 }) }}
 
 
