--- a/app/views/qts/create-account-sign-in.html
+++ b/app/views/qts/create-account-sign-in.html
@@ -19,7 +19,7 @@
       value: "false",
       text: "Yes, sign in and continue application",
       hint: {
-        text: "Sign in using your " + serviceNameTa
+        text: "Sign in using your " + data.tsa
       }
     },
     {
