--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -22,3 +22,6 @@ $govuk-assets-path: '/govuk/assets/';
 .secondary-button {
     margin: 0 0 0 .5em;
 }
+#bannerBar {
+    background-color: #F3F2F1;
+    padding: 0 0 0 0.5em;  }
