--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -8,7 +8,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% set accountLink %}
 
   {%- if account == 'true' -%}
-        /account/account-details
+        /account/account-details?alert=hide
      {%- else -%}
        /account/interstitial
   {%- endif -%}
