--- a/app/views/auth/change-email-request.html
+++ b/app/views/auth/change-email-request.html
@@ -28,8 +28,8 @@
 
 <ul class="govuk-list govuk-list--bullet">
   <li>select ‘Compose’ to create a new secure email</li>
-  <li>enter ‘[TO BE DETERMINED]’ as the recipient</li>
-  <li>enter ‘[TO BE DETERMINED]’ as the subject line</li>
+  <li>enter ‘qts.enquiries@education.gov.uk’ as the recipient</li>
+  <li>enter ‘Change of details’ as the subject line</li>
   <li>in your email include:
     <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-2">
       <li>your full legal name</li>
