--- a/app/views/auth/finish.html
+++ b/app/views/auth/finish.html
@@ -2,8 +2,7 @@
 {% set title %}You've created a Teaching services account{% endset %}
 {% set hideBackLink = true %}
 {% set serviceNameOnwards = data.qts %}
-
-
+{% set auth = true %}
 
 {% block form %}
   {% include 'auth/_finish.html' %}
