--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,8 +35,13 @@
   <span class="govuk-hint">User attempts to sign in but does not have an account ( new@email.com )</span>
 </p>
 <p>
-  <a href="/user-research/qts/create-account?email=existing@email.com">Create account (account exists)</a> <br>
+  <a href="/user-research/qts/create-account?email=existing@email.com&phone=07827999619">Create account (existing email match)</a> <br>
   <span class="govuk-hint">User attempts to create an account with an existing email ( existing@email.com )</span>
+</p>
+
+<p>
+  <a href="/user-research/qts/create-account?phone=07827999618&email=new@email.com">Create account (existing mobile phone match)</a> <br>
+  <span class="govuk-hint">User attempts to create an account with an existing mobile phone number ( 07827999618 )</span>
 </p>
 
 <div class="govuk-grid-row">
