--- a/app/views/sign-in/finish.html
+++ b/app/views/sign-in/finish.html
@@ -3,5 +3,5 @@
 {% set hideBackLink = true %}
 
 {% block form %}
-  {% include 'sign-in/_finish.html' %}
+  {% include 'auth/_finish.html' %}
 {% endblock %}
