--- a/app/views/auth/_finish.html
+++ b/app/views/auth/_finish.html
@@ -1,6 +1,5 @@
-
-
+{%- if auth -%}
 <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
+{%- endif -%}
 
-
-<p class="govuk-!-margin-bottom-6">Continue to <strong>{{serviceNameOnwards or 'Apply for QTS'}}</strong>. </p>
+<p class="govuk-!-margin-bottom-6">Continue to <strong>{{serviceNameOnwards or data.qts }}</strong>. </p>
