--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -1,11 +1,9 @@
 {% extends "layouts/forms.html" %}
 {% set hideButton = true %}
-{% set accountPath = 'email' %}
-{% set signIn = '/sign-in/email' %}
+{% set accountPath = '/user-research/qts/create-account' %}
+{% set signIn = '/user-research/qts/sign-in' %}
 {% set hideBackLink = true %}
 {% set showheader = true %}
-
-
 
 {% block form %}
   {% include 'auth/_ga-account.html' %}
