--- a/app/views/sign-in/interstitial.html
+++ b/app/views/sign-in/interstitial.html
@@ -1,17 +1,10 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Sign in using your {{ data.tsa }}{% endset %}
 
-{% set details %}
-    <p>{{ data.tsaP }} are new. They let teachers and teaching professionals access different DfE services with one login. You can also update your details with DfE in one place.</p>
-    <p>At the moment there are only a few DfE services using {{ data.tsaP }}. In the future, you’ll be able to use your account details to sign in to most DfE teaching services.</p>
-{% endset %}
-
-
 
 {% block form %}
 <p class="govuk-!-margin-bottom-6">Continue your application by signing into your {{ data.tsa }}. </p>
-{{ govukDetails({
-    summaryText: "About  " + data.tsaP,
-    html: details
-}) }}
+
+{% include 'auth/_about-account.html' %}
+
 {% endblock %}
