--- a/app/views/account/interstitial.html
+++ b/app/views/account/interstitial.html
@@ -11,7 +11,7 @@
 
 {% block form %}
 <p class="govuk-!-margin-bottom-6">You use your {{ data.tsa }} to sign in to '{{ data.qts }}'. </p>
-<p>You can change the following details in your {{ data.tsa }}</p>
+<p>You can change these details in your {{ data.tsa }}</p>
 
 <ul class="govuk-list govuk-list--bullet">
     <li>
@@ -24,7 +24,7 @@
         date of birth
     </li>
     <li>
-        mobile number 
+        mobile number
     </li>
 </ul>
 <p><a href='/account/account-details'>Change your account details in your {{ data.tsa }}</a></p>
