Update to edge case flow

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,6 +43,10 @@
   <a href="/user-research/qts/create-account?phone=07827999618&email=new@email.com">Create account (existing mobile phone match)</a> <br>
   <span class="govuk-hint">User attempts to create an account with an existing mobile phone number ( 07827999618 )</span>
 </p>
+<p>
+  <a href="/user-research/qts/create-account?firstName=Dave&lastName=Smith">Create account (name and DOB match)</a> <br>
+  <span class="govuk-hint">User attempts to create an account and their name and Dob match a record  ( Dave Smith )</span>
+</p>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
