Update to the shared email journey

--- a/app/views/account/interstitial.html
+++ b/app/views/account/interstitial.html
@@ -1,11 +1,10 @@
-{% extends "layouts/forms.html" %}
+{% extends "layouts/forms-qts.html" %}
 {% set title %}Change your account details{% endset %}
 {% set account  = 'true' %}
 {% set signedIn = 'true' %}
 {% set hideButton = 'true' %}
 {% set showSubheader = true %}
 {% set subHeader = data.tsa %}
-{% set serviceName %}{{ data.qts }}{% endset %}
 
 
 
