--- a/app/views/auth/create-account-interstitial.html
+++ b/app/views/auth/create-account-interstitial.html
@@ -3,7 +3,7 @@
 {% set buttonText %}Create an account{% endset %}
 
 {% block form %}
-    <p class="govuk-!-margin-bottom-6">We couldn't find an {{ data.tsa }}  belonging to {{ data.email or 'email@example.com' }}. </p>
+    <p class="govuk-!-margin-bottom-6">We couldn't find an {{ data.tsa }}  belonging to ({{ data.email or 'email@example.com' }}). </p>
     <h2 class="govuk-heading-m">Create an account</h2>
     {% include 'auth/_account-info.html' %}
 
