--- a/app/views/auth/phone-code.html
+++ b/app/views/auth/phone-code.html
@@ -1,5 +1,6 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Check your phone{% endset %}
+{% set auth = 'true' %}
 
 {% block form %}
   {% include 'auth/_phone-code.html' %}
