--- a/app/views/index.html
+++ b/app/views/index.html
@@ -44,7 +44,7 @@
   <span class="govuk-hint">User attempts to create an account with an existing mobile phone number ( 07827999618 )</span>
 </p>
 <p>
-  <a href="/user-research/qts/create-account?firstName=Dave&lastName=Smith">Create account (name and DOB match)</a> <br>
+  <a href="/user-research/qts/create-account?email=davesmith@email.com&phone=07827999613&firstName=Dave&lastName=Smith">Create account (name and DOB match)</a> <br>
   <span class="govuk-hint">User attempts to create an account and their name and Dob match a record  ( Dave Smith )</span>
 </p>
 
