--- a/app/views/layouts/forms.html
+++ b/app/views/layouts/forms.html
@@ -16,6 +16,16 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
+      {{ govukErrorSummary({
+        titleText: "There is a problem",
+        errorList: [
+          {
+            text: data['errorMessageCopy'],
+            href: "#email"
+          } 
+        ]
+      }) if data['errorMessage'] == 'true' }} 
+    
       {% if showSubheader %}
          <span class="govuk-caption-xl">{{subHeader}}</span>
        {% endif %}
