--- a/app/views/index.html
+++ b/app/views/index.html
@@ -47,6 +47,10 @@
   <a href="/user-research/qts/create-account?email=davesmith@email.com&phone=07827999613&firstName=Dave&lastName=Smith">Create account (name and DOB match)</a> <br>
   <span class="govuk-hint">User attempts to create an account and their name and Dob match a record  ( Dave Smith )</span>
 </p>
+<p>
+  <a href="/user-research/qts/create-account?email=head@school.com&phone=07827999613&firstName=Dave&lastName=Smith">Create account (shared email address)</a> <br>
+  <span class="govuk-hint">User attempts to create an account and enters a shared school email address  ( head@school.com )</span>
+</p>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
