content edge cases update
- update content on edge cases
- update content on change details
- content on email address validation

--- a/app/views/auth/_email-code.html
+++ b/app/views/auth/_email-code.html
@@ -7,7 +7,7 @@
 {% endset %}
 
 
-<p>A confirmation code has been sent to <strong>({{ email }})</strong>.</p>
+<p>A confirmation code has been sent to <strong>{{ email }}</strong>.</p>
 
 {{ govukInput({
   label: {
@@ -27,4 +27,3 @@
   <a href="/sign-in/resend-phone">I can't access this email address</a>
 </p>
 {%- endif -%}
-
