--- a/app/views/qts/_details.html
+++ b/app/views/qts/_details.html
@@ -1,9 +1,8 @@
 {% set details %}
-	Change your name and date of birth on your <a href='/account/interstitial'>{{ data.tsa }}</a>
+	Change your name and date of birth in your <a href='/account/interstitial'>{{ data.tsa }}</a>
 {% endset %}
 
 
 {{ govukInsetText({
 	html: details
   }) }}
- 
