--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -2,7 +2,7 @@
   href={{- signIn -}}
 {% endset -%}
 
-<h1 class="govuk-heading-xl">Create a Teaching services account</h1>
+<h1 class="govuk-heading-xl">Create a {{ serviceName }}</h1>
 
 
 
