--- a/app/views/auth/finish.html
+++ b/app/views/auth/finish.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms.html" %}
-{% set title %}You've created a Teaching services account{% endset %}
+{% set title %}You've created a {{ serviceName }}{% endset %}
 {% set hideBackLink = true %}
 {% set serviceNameOnwards = data.qts %}
 {% set auth = true %}
